force-app/main/default/objects/ADM_Build__c/ADM_Build__c.object-meta.xml
<CustomObject>
    <label>Build</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Builds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>