force-app/main/default/objects/ADM_Build__c/fields/Release_Freeze__c.field-meta.xml
<CustomField>
    <fullName>Release_Freeze__c</fullName>
    <label>Release Freeze</label>
    <type>Date</type>
</CustomField>