force-app/main/default/objects/ADM_Build__c/fields/Weeks_prior_to_release__c.field-meta.xml
<CustomField>
    <fullName>Weeks_prior_to_release__c</fullName>
    <formula>IF ( NOT( ISNULL( Release_Freeze__c ) ), 
CEILING( ( TODAY() - Release_Freeze__c ) / 7 ),
null)</formula>
    <label>Weeks prior to release</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>